# ProgaLabs

C++/: func.h  task1  task3.cpp
Grid/: CMakeLists.txt  Grid.cpp  README.md  main.cpp
Programing/: Edinorogs.py  main.py
Programing/Matplotlib/: Matplot.ipynb
Programing/OOP/: gun py.py
Programing/bonus_task/: bonus_task.ipynb
Programing/control task/: control_task.ipynb
Programing/pygame/: Edinorog.py  Ovechki.py  picture.py
Programing/turtle 1/: butterfly.py  ebalo.py  figures.py  flower.py  spiral.py  stae.py  turtle.ipynb
Programing/turtle2/: broun.py  gas.py  phys model.py
Skiplist/: CMakeLists.txt  README.md  Skiplist.cpp  main.cpp
lab1/C++/: func.h  graphics.py  main.cpp  task1.cpp  task2.cpp  task3.cpp
lab1/Обработка/: graphic.ipynb  Обработка.md  Обработка.txt
lab1/Обработка/data/: data1.csv  data10.csv  data11.csv  data12.csv  data13.csv  data14.csv  data15.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv
lab2/: Function.h  approx.py  graphic.py  task1.cpp  task2.cpp  task3.cpp
lab2/data/: data.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv
lab3/: CMakeLists.txt  Dynamic_array.cpp  Dynamic_array.h  Lincked_list.cpp  Readme.md  Task1.cpp  Task2.1.cpp  task2.1.py  task2.2.cpp  task2.2.py  task2.3.cpp  task2.3.py
lab3/Libaries/Dynamic_array/: Dynamic_array.cpp  Dynamic_array.h
lab3/tasks/: task2.3.cpp
untitled3/: CMakeLists.txt  data.txt  task3
